update da versão com implementação do CRUD de turma no arquivo crtls_turma, chamada de rotas no arquivo api_turma e documentação e documentação em swagger.yaml
