# src/controllers/ctrls_turma.py
@@ -1,11 +1,68 @@
-from flask import render_template, request, redirect, url_for
-from models.models_turma import banco_de_dados
-from models.models_turma import Turma
+from flask import request, jsonify
+from models import Turma, banco_de_dados
 
-class AlunoController:
+class TurmaController:
      # A chamada para esse método seria feita diretamente pela classe, sem a necessidade de criar um objeto (uma instância):
      @staticmethod
-     def index():
+     def listar_turmas():
           turmas = Turma.query.all()
-        #  validar pois no enunciado indica que não será usado views 
-          return render_template('', turmas=turmas)
+          if turmas:
+               resultado = [
+                    {
+                         'id': turma.id,
+                         'nome': turma.nome,
+                         'professor_id': turma.professor_id,
+                         'ativo': turma.ativo,
+                    } for turma in turmas
+               ]
+               return jsonify(resultado), 200
+          else:
+               return jsonify({'mensagem': 'Nenhuma turma encontrada.'}), 200
+
+     @staticmethod
+     def criar_turma():
+          dados = request.get_json()
+          campos_obrigatorios = ['nome', 'professor_id']
+          if not dados or not all(k in dados for k in campos_obrigatorios):
+               return jsonify({'erro': 'nome e professor_id são campos obrigatórios.'}), 400
+
+          nova_turma = Turma(
+               nome = dados['nome'],
+               professor_id = dados['professor_id'],
+               ativo = dados.get('ativo', True)
+          )
+          banco_de_dados.session.add(nova_turma)
+          banco_de_dados.session.commit()
+
+          return jsonify(
+               {
+                    'mensagem': 'Turma criada com sucesso!',
+                    'id': nova_turma.id,
+                    'nome': nova_turma.nome,
+                    'professor_id': nova_turma.professor_id,
+                    'ativo': nova_turma.ativo
+               }
+          ), 201
+     @staticmethod
+     def atualizar_turma(turma_id):
+          turma = Turma.query.get(turma_id)
+          if turma:
+               dados = request.get_json()
+               turma.nome = dados.get('nome', turma.nome)
+               turma.professor_id = dados.get('professor_id', turma.professor_id)
+               turma.ativo = dados.get('ativo', turma.ativo)
+
+               banco_de_dados.session.commit()
+               return jsonify({'mensagem': 'Turma atualizada com sucesso!'}), 200
+          else:
+               return jsonify({'erro': 'Turma não encontrada.'}), 404
+
+     @staticmethod
+     def deletar_turma(turma_id):
+          turma = Turma.query.get(turma_id)
+          if turma:
+               banco_de_dados.session.delete(turma)
+               banco_de_dados.session.commit()
+               return jsonify({'mensagem': 'Turma deletada com sucesso!'}), 200
+          else:
+               return jsonify({'erro': 'Turma não encontrada.'}), 404    
